tests/traits/traits.exp
test.js:18
 18: ((new Foo).x: number); // error: Qux wins
      ^^^^^^^^^^^ string. This type is incompatible with
 18: ((new Foo).x: number); // error: Qux wins
                   ^^^^^^ number

test.js:19
 19: ((new Foo).y: string); // error: Bar wins
      ^^^^^^^^^^^ number. This type is incompatible with
 19: ((new Foo).y: string); // error: Bar wins
                   ^^^^^^ string

test.js:20
 20: ((new Foo).z: number); // error: Qux wins
      ^^^^^^^^^^^ string. This type is incompatible with
 20: ((new Foo).z: number); // error: Qux wins
                   ^^^^^^ number

test2.js:2
  2: declare class C mixins I { }
                            ^ I. type referenced from value position
  1: declare interface I { }
             ^^^^^^^^^^^^^^^ type I


Found 4 errors
